--- a/discovery-service/package.json
+++ b/discovery-service/package.json
@@ -4,8 +4,9 @@
   "description": "Service which allows other services to register and unregister",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   },
-  "author": "",
+  "author": "John Fergus Ginnane",
   "license": "ISC"
 }
