--- a/discovery-service/package.json
+++ b/discovery-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.13.1",
-    "@grpc/proto-loader": "^0.7.13"
+    "@grpc/proto-loader": "^0.7.13",
+    "uuid": "^11.1.0"
   }
 }
