--- a/client-service/package.json
+++ b/client-service/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "warehouse-service",
+  "name": "client-service",
   "version": "1.0.0",
-  "description": "Warehouse Controller Service that tells robots where to go and what to do",
+  "description": "Command line client to interface with the warehouse system",
+  "type": "commonjs",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
