--- a/web-service/package.json
+++ b/web-service/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
     "morgan": "~1.9.1",
+    "selfsigned": "^2.4.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
