--- a/web-service/package.json
+++ b/web-service/package.json
@@ -19,6 +19,7 @@
     "selfsigned": "^2.4.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "wss": "^3.3.4"
   }
 }
